[gd_scene load_steps=31 format=3 uid="uid://7vrquhj4upbd"]

[ext_resource type="Script" path="res://scripts/gimball.gd" id="1_bals3"]
[ext_resource type="Script" path="res://scripts/game_loop.gd" id="1_v858x"]
[ext_resource type="Script" path="res://scripts/character.gd" id="2_swd6p"]
[ext_resource type="Texture2D" uid="uid://4h8lg0eip4la" path="res://sprites/character_1.png" id="3_5wbev"]
[ext_resource type="Texture2D" uid="uid://dul0obb1a5l0" path="res://sprites/character_2.png" id="4_yxqrr"]
[ext_resource type="Texture2D" uid="uid://bbueq7jhvvsrq" path="res://materials/floor_0_uv.png" id="6_hya6b"]
[ext_resource type="ArrayMesh" uid="uid://dvni1weagubik" path="res://models/floor.obj" id="7_fxemo"]
[ext_resource type="StyleBox" uid="uid://c6jjixbxfis8q" path="res://styles/button_hover.tres" id="9_0fyir"]
[ext_resource type="Texture2D" uid="uid://bmlcrht4au1b7" path="res://sprites/exit.svg" id="9_8fe83"]
[ext_resource type="StyleBox" uid="uid://p7nv04qdasuf" path="res://styles/button_pressed.tres" id="10_bq8p6"]
[ext_resource type="Script" path="res://scripts/floor_handler.gd" id="10_nnce0"]
[ext_resource type="StyleBox" uid="uid://ba6m5ystp3ldt" path="res://styles/button_normal.tres" id="11_t41m0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_la3ek"]
size = Vector3(1, 0.247192, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1xi2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5wbev")
}, {
"duration": 1.0,
"texture": ExtResource("4_yxqrr")
}],
"loop": true,
"name": &"character",
"speed": 5.0
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_401ny"]
albedo_texture = ExtResource("6_hya6b")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ja3wy"]
height = 0.0490129

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ev8rt"]
points = PackedVector3Array(0.515873, 13.2608, -14.4448, -6.70635, -1.18334, -16.5077, 0.515873, -1.18334, -16.5077, -6.70635, 23.0627, -16.5077, -6.70635, -1.18334, -13.9291, 0.515873, 23.0627, -16.5077, -6.70635, 23.0627, -14.9605, 0.515873, -1.18334, -13.9291, -7.55597, 13.8069, -14.2628, 0.515873, 23.0627, -14.9605, 0.515873, 0.881469, -13.9291, -6.70635, 2.94627, -13.9291)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b6ki8"]
points = PackedVector3Array(13.7889, 2.077, -7.32345, 16.5077, 23.0627, 4.64286, 16.5077, 23.0627, -6.70635, 16.5077, -1.18334, 4.64286, 14.9605, 23.0627, 4.64286, 16.5077, -1.18334, -6.70635, 13.9291, -1.18334, 4.64286, 14.9605, 23.0627, -6.70635, 13.9291, -1.18334, -6.70635, 14.3417, 13.5702, -7.46283, 14.4448, 13.2608, 4.64286, 13.9291, 0.881469, 4.64286)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0y80r"]
points = PackedVector3Array(6.70635, 23.0627, 14.9605, 0.515873, -1.18334, 13.9291, 0.515873, -1.18334, 16.5077, 6.70635, -1.18334, 13.9291, 6.70635, -1.18334, 16.5077, 0.515873, 23.0627, 16.5077, 6.70635, 23.0627, 16.5077, 0.515873, 23.0627, 14.9605, 7.60678, 13.936, 14.2198, 0.515873, 0.881469, 13.9291, 0.515873, 13.2608, 14.4448, 6.70635, 2.94627, 13.9291)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1rbfj"]
points = PackedVector3Array(-6.70635, 19.9655, -14.4434, -16.507, -1.18334, -8.25569, -8.25569, -1.18334, -16.507, -13.4112, -1.18334, -6.70635, -16.507, 23.0627, -8.25569, -8.25569, 23.0627, -16.507, -14.9586, 23.0627, -6.70635, -6.70635, -1.18334, -13.4112, -6.96333, -0.547594, -16.25, -16.25, -0.547594, -6.96333, -6.70635, 23.0627, -14.9586, -13.4112, 2.94627, -6.70635, -14.4434, 19.9655, -6.70635, -6.96333, 22.427, -16.25, -16.25, 22.427, -6.96333, -6.70635, 2.94627, -13.4112, -13.9273, 11.711, -6.70635)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rjauw"]
points = PackedVector3Array(-13.9291, -1.18334, -6.70635, -14.9605, 23.0627, -1.54762, -16.5077, 23.0627, -1.54762, -14.9605, 23.0627, -6.70635, -16.5077, -1.18334, -1.54762, -16.5077, -1.18334, -6.70635, -13.9291, -1.18334, -1.54762, -16.5077, 23.0627, -6.70635, -13.9291, 2.94627, -6.19027, -14.4448, 13.2608, -1.54762, -13.9291, 0.881469, -1.54762, -14.4448, 13.2608, -6.70635)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_cpm6a"]
points = PackedVector3Array(-13.9291, -1.18334, -1.54762, -14.9605, 23.0627, 6.18972, -16.5077, 23.0627, 6.18972, -14.9605, 23.0627, -1.54762, -16.5077, -1.18334, 6.18972, -16.5077, -1.18334, -1.54762, -13.9291, -1.18334, 6.18972, -16.5077, 23.0627, -1.54762, -14.4448, 13.2608, -1.54762, -13.9291, 0.881469, 6.18972, -14.4448, 13.2608, 6.18972, -13.9291, 0.881469, -1.54762)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7sag7"]
points = PackedVector3Array(-14.445, 19.9655, 7.22222, -16.5079, -1.18334, 6.19048, -13.929, -1.18334, 6.19048, -16.5079, 23.0627, 6.19048, -16.5079, -1.18334, 7.22222, -13.4127, -1.18334, 7.22222, -16.5079, 23.0627, 7.22222, -14.9603, 23.0627, 6.19048, -13.4127, 2.94627, 6.70635, -14.9603, 23.0627, 7.22222, -14.445, 19.9655, 6.70635)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i0v8b"]
points = PackedVector3Array(-8.25569, 23.0627, 16.5061, -16.25, -0.547594, 7.46565, -12.896, -1.18334, 7.22222, -14.4434, 23.0627, 7.22222, -6.70635, -1.18334, 13.4115, -8.25569, -1.18334, 16.5061, -16.507, 23.0627, 8.25558, -6.70635, 19.9655, 14.443, -16.507, -1.18334, 8.25558, -6.97672, -0.514451, 16.25, -6.70635, 23.0627, 14.9593, -12.896, 2.94627, 7.22222, -13.9273, 19.9655, 7.22222, -6.97672, 22.3938, 16.25, -16.25, 22.427, 7.46565, -6.70635, 2.94627, 13.4115, -13.4112, 11.711, 7.22222)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_je3lb"]
points = PackedVector3Array(0.515873, 23.0627, 14.9605, -6.70635, -1.18334, 13.9291, -6.70635, -1.18334, 16.5077, 0.515873, -1.18334, 13.9291, 0.515873, -1.18334, 16.5077, -6.70635, 23.0627, 16.5077, -7.55597, 13.8069, 14.2628, 0.515873, 23.0627, 16.5077, -6.70635, 23.0627, 14.9605, 0.515873, 0.881469, 13.9291, 0.515873, 13.2608, 14.4448, -6.70635, 2.94627, 13.9291)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_bk1ib"]
points = PackedVector3Array(7.60683, 13.9361, -14.2197, 0.515873, -1.18334, -16.5077, 6.70635, -1.18334, -16.5077, 0.515873, 23.0627, -16.5077, 0.515873, -1.18334, -13.9291, 6.70635, 23.0627, -16.5077, 0.515873, 23.0627, -14.9605, 6.70635, -1.18334, -13.9291, 6.70635, 23.0627, -14.9605, 0.515873, 0.881469, -13.9291, 0.515873, 13.2608, -14.4448, 6.70635, 2.94627, -13.9291)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_buijf"]
points = PackedVector3Array(14.4434, 19.9655, -6.70635, 6.96333, -0.547594, -16.25, 8.25569, -1.18334, -16.507, 8.25569, 23.0627, -16.507, 16.507, -1.18334, -8.25569, 6.70635, -1.18334, -13.4112, 16.507, 23.0627, -8.25569, 6.70635, 23.0627, -14.9586, 13.4112, -1.18334, -6.70635, 16.25, -0.547594, -6.96333, 14.9586, 23.0627, -6.70635, 6.70635, 2.94627, -13.4112, 6.70635, 19.9655, -14.4434, 6.96333, 22.427, -16.25, 16.25, 22.427, -6.96333, 13.4112, 2.94627, -6.70635, 6.70635, 11.711, -13.9273)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_456u3"]
points = PackedVector3Array(14.9605, 23.0627, 6.70615, 13.9291, -1.18334, 4.64306, 13.9291, -1.18334, 6.70615, 16.5077, -1.18334, 4.64306, 16.5077, -1.18334, 6.70615, 16.5077, 23.0627, 4.64306, 16.5077, 23.0627, 6.70615, 14.9605, 23.0627, 4.64306, 13.9291, 2.94627, 6.70615, 14.4448, 13.2608, 4.64306)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_0vkxa"]
points = PackedVector3Array(14.4434, 19.9655, 6.70635, 6.70635, -1.18334, 13.4112, 6.96333, -0.547594, 16.25, 16.507, -1.18334, 8.25569, 8.25569, 23.0627, 16.507, 16.507, 23.0627, 8.25569, 6.70635, 23.0627, 14.9586, 13.4112, -1.18334, 6.70635, 8.25569, -1.18334, 16.507, 16.25, -0.547594, 6.96333, 14.9586, 23.0627, 6.70635, 6.70635, 2.94627, 13.4112, 6.70635, 19.9655, 14.4434, 6.96333, 22.427, 16.25, 16.25, 22.427, 6.96333, 13.4112, 2.94627, 6.70635, 6.70635, 11.711, 13.9273)

[sub_resource type="SystemFont" id="SystemFont_upufv"]
subpixel_positioning = 0

[node name="main" type="Node3D"]
script = ExtResource("1_v858x")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 7.0
autostart = true

[node name="cam_gimball" type="Node3D" parent="."]
script = ExtResource("1_bals3")

[node name="Camera3D" type="Camera3D" parent="cam_gimball"]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 30, 16)
projection = 1
size = 50.0
near = 0.001

[node name="character" type="CharacterBody3D" parent="cam_gimball"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
disable_mode = 2
collision_layer = 2
collision_mask = 5
axis_lock_linear_x = true
slide_on_ceiling = false
floor_constant_speed = true
floor_max_angle = 0.0174533
safe_margin = 1.0
script = ExtResource("2_swd6p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="cam_gimball/character"]
process_mode = 1
physics_interpolation_mode = 1
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
visible = false
shape = SubResource("BoxShape3D_la3ek")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="cam_gimball/character"]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 0, 0)
sprite_frames = SubResource("SpriteFrames_t1xi2")
animation = &"character"
autoplay = "character"

[node name="floor" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="floor" groups=["floors"]]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
mesh = ExtResource("7_fxemo")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_401ny")

[node name="rigidbody" type="RigidBody3D" parent="floor/Floor"]

[node name="FloorBody3D" type="StaticBody3D" parent="floor"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
disable_mode = 1
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/FloorBody3D"]
transform = Transform3D(27.955, 0, 0, 0, 27.955, 0, 0, 0, 27.955, 0, -0.775, 0)
shape = SubResource("CylinderShape3D_ja3wy")

[node name="WallBody3D" type="StaticBody3D" parent="floor"]
transform = Transform3D(0.595, 0, 0, 0, 0.595, 0, 0, 0, 0.595, 0, 0.05, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_ev8rt")
disabled = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_b6ki8")
disabled = true

[node name="CollisionShape3D3" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_0y80r")
disabled = true

[node name="CollisionShape3D4" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_1rbfj")
disabled = true

[node name="CollisionShape3D5" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_rjauw")
disabled = true

[node name="CollisionShape3D6" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_cpm6a")
disabled = true

[node name="CollisionShape3D7" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_7sag7")
disabled = true

[node name="CollisionShape3D8" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_i0v8b")
disabled = true

[node name="CollisionShape3D9" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_je3lb")
disabled = true

[node name="CollisionShape3D10" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_bk1ib")
disabled = true

[node name="CollisionShape3D11" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_buijf")
disabled = true

[node name="CollisionShape3D12" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_456u3")
disabled = true

[node name="CollisionShape3D13" type="CollisionShape3D" parent="floor/WallBody3D"]
shape = SubResource("ConvexPolygonShape3D_0vkxa")
disabled = true

[node name="floor_spawn_point" type="Node3D" parent="." groups=["spawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0)
script = ExtResource("10_nnce0")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game_over_screen" type="Control" parent="HUD"]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="game_over" type="RichTextLabel" parent="HUD/game_over_screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -274.5
offset_top = -165.0
offset_right = 274.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = SubResource("SystemFont_upufv")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center][b]GAME OVER"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
language = "en"

[node name="message" type="RichTextLabel" parent="HUD/game_over_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.5
offset_top = -69.0
offset_right = 274.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("SystemFont_upufv")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]You survived
%d floors"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
language = "en"

[node name="play_again" type="Button" parent="HUD/game_over_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = 146.0
offset_right = 112.5
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = ExtResource("9_0fyir")
theme_override_styles/pressed = ExtResource("10_bq8p6")
theme_override_styles/normal = ExtResource("11_t41m0")
action_mode = 0
text = "PLAY AGAIN"

[node name="background" type="Sprite2D" parent="HUD/game_over_screen/play_again"]
modulate = Color(1, 1, 1, 0.25098)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_hya6b")

[node name="exit" type="Button" parent="HUD/game_over_screen"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 501.0
offset_top = -279.0
offset_right = 531.0
offset_bottom = -249.0
grow_horizontal = 0
theme_override_styles/hover = ExtResource("9_0fyir")
theme_override_styles/pressed = ExtResource("10_bq8p6")
theme_override_styles/normal = ExtResource("11_t41m0")
action_mode = 0
icon = ExtResource("9_8fe83")
icon_alignment = 2
vertical_icon_alignment = 0
expand_icon = true

[connection signal="timeout" from="Timer" to="floor_spawn_point" method="_on_timeout"]
[connection signal="pressed" from="HUD/game_over_screen/play_again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="HUD/game_over_screen/exit" to="." method="_on_exit_pressed"]
